# justship_core

./: .env.dev  .env.prod  .env.prod.db  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.sh  celery.sh  deploy.sh  develop.yml  docker-compose.yml  manage.py  production.yml  pyproject.toml  scripts.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: reporte-de-error.md  solicitud-de-funcionalidad.md
.github/workflows/: django.yml
config/: settings.py  wsgi.py
config/settings/: base.py
core/: Dockerfile  Dockerfile.prod  docker-entrypoint.sh  entrypoint.prod.sh
core/config/: .__init__.py.swp  __init__.py  asgi.py  celery.py  schema.py  settings.py  urls.py  wsgi.py
core/config/settings/: base.py  develop.py  production.py
core/justship/accounts/: apps.py
core/justship/api/: apps.py  schema.py
core/justship/core/: apps.py
core/justship/mails/: admin.py  apps.py  models.py  tasks.py
core/justship/products/: apps.py
core/justship/resources/: apps.py
core/justshipto_core/accounts/: admin.py  apps.py  urls.py
core/requirements/: base.txt  develop.txt  production.txt  requirements.txt
core/tests/: test_env_settings.py
justship/: manage.py
justship/config/: celery.py  urls.py
justship/requirements/: base.txt  develop.txt  test.txt
justship/tests/: test_env_settings.py
justshipto_core/: asgi.py  settings.py  urls.py  wsgi.py
justshipto_core/accounts/: apps.py
justshipto_core/core/: apps.py
nginx/: Dockerfile  nginx.conf
nginx/sites-enabled/: justshipto
requirements/: base.txt  develop.txt  production.txt
(+111 files in other folders)
